--- a/app/src/main/res/layout/popup_delete_dialog.xml
+++ b/app/src/main/res/layout/popup_delete_dialog.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/black">
+    android:background="@color/white">
 
     <TextView
         android:id="@+id/tv_title"
@@ -13,30 +13,52 @@
         android:layout_marginTop="@dimen/_15sdp"
         android:fontFamily="@font/latobold"
         android:text="Are You Sure Want\nTo Delete All Notes"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textSize="@dimen/_15ssp" />
 
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_title"
+        android:layout_centerHorizontal="true"
         android:layout_marginHorizontal="@dimen/_15sdp"
-        android:layout_marginTop="@dimen/_15sdp"
-        android:layout_marginBottom="@dimen/_20sdp"
+        android:layout_marginTop="@dimen/_30sdp"
+
         android:orientation="horizontal">
 
         <LinearLayout
-            android:background="@color/white"
-
+            android:id="@+id/ll_cancel"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/_15sdp"
+
+            android:background="@color/black"
+            android:padding="@dimen/_10sdp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Cancel"
+                android:textColor="@color/white" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ll_yes"
+            android:layout_width="wrap_content"
+
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/_20sdp"
+            android:layout_marginBottom="@dimen/_15sdp"
+
+            android:background="@color/black"
+            android:padding="@dimen/_10sdp">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Yes"
-                android:textColor="@color/black" />
+                android:textColor="@color/white" />
         </LinearLayout>
     </LinearLayout>
 
