--- a/app/src/main/res/layout/activity_add_notes.xml
+++ b/app/src/main/res/layout/activity_add_notes.xml
@@ -23,6 +23,16 @@
             app:tint="@color/white" />
 
         <ImageView
+            android:visibility="gone"
+            android:id="@+id/iv_share"
+            android:layout_width="@dimen/_20sdp"
+            android:layout_height="@dimen/_20sdp"
+            android:layout_marginRight="@dimen/_15sdp"
+            android:layout_toLeftOf="@id/iv_save"
+            android:src="@drawable/img_share_icon"
+            app:tint="@color/white" />
+
+        <ImageView
             android:id="@+id/iv_save"
             android:layout_width="@dimen/_20sdp"
             android:layout_height="@dimen/_20sdp"
@@ -44,7 +54,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/latoregular"
-            android:hint="Title"
+            android:hint="@string/title"
             android:imeOptions="actionNext"
             android:inputType="text"
             android:maxLength="50"
@@ -60,7 +70,7 @@
             android:layout_below="@id/ettitle"
             android:layout_marginTop="@dimen/_20sdp"
             android:fontFamily="@font/latolight"
-            android:hint="Type Something Here....."
+            android:hint="@string/type_something_here"
             android:textColor="@color/white"
             android:textColorHint="@color/white"
             android:textSize="@dimen/_14ssp" />
